--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -4,12 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <fragment
-        android:id="@+id/placeFragment"
-        android:name="com.binyou.sunnyweather.ui.place.PlaceFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    tools:context=".ui.weather.WeatherActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
