修改App的图标

--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -34,7 +34,7 @@
             </LinearLayout>
 
         </ScrollView>
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>0
 
     <FrameLayout
         android:layout_width="match_parent"
